--- a/style.css
+++ b/style.css
@@ -30,9 +30,13 @@ body {
     background-color: #d8d8d8;
     border: 1px solid rgba(0,0,0,0.8);
     padding: 10px 10px;
-    font-size: 16px;
+    font-size: 18px;
     font-family: sans-serif;
 
     position: relative;
     overflow: hidden;
+}
+
+.title {
+    font-size: 46px;
 }
